[package]
name = "libcheck"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[package.metadata.cargo-compete.bin]
area_of_union_of_rectangles = {problem = "https://judge.yosupo.jp/problem/area_of_union_of_rectangles"}
associative_array = {problem = "https://judge.yosupo.jp/problem/associative_array"}
deque_operate_all_composite = {problem = "https://judge.yosupo.jp/problem/deque_operate_all_composite"}
double_ended_priority_queue = {problem = "https://judge.yosupo.jp/problem/double_ended_priority_queue"}
dynamic_graph_vertex_add_component_sum = {problem = "https://judge.yosupo.jp/problem/dynamic_graph_vertex_add_component_sum"}
dynamic_sequence_range_affine_range_sum = {problem = "https://judge.yosupo.jp/problem/dynamic_sequence_range_affine_range_sum"}
dynamic_tree_subtree_add_subtree_sum = {problem = "https://judge.yosupo.jp/problem/dynamic_tree_subtree_add_subtree_sum"}
dynamic_tree_vertex_add_path_sum = {problem = "https://judge.yosupo.jp/problem/dynamic_tree_vertex_add_path_sum"}
dynamic_tree_vertex_add_subtree_sum = {problem = "https://judge.yosupo.jp/problem/dynamic_tree_vertex_add_subtree_sum"}
dynamic_tree_vertex_set_path_composite = {problem = "https://judge.yosupo.jp/problem/dynamic_tree_vertex_set_path_composite"}
line_add_get_min = {problem = "https://judge.yosupo.jp/problem/line_add_get_min"}
longest_increasing_subsequence = {problem = "https://judge.yosupo.jp/problem/longest_increasing_subsequence"}
number_of_subsequences = {problem = "https://judge.yosupo.jp/problem/number_of_subsequences"}
persistent_queue = {problem = "https://judge.yosupo.jp/problem/persistent_queue"}
persistent_unionfind = {problem = "https://judge.yosupo.jp/problem/persistent_unionfind"}
point_add_range_sum = {problem = "https://judge.yosupo.jp/problem/point_add_range_sum"}
point_add_rectangle_sum = {problem = "https://judge.yosupo.jp/problem/point_add_rectangle_sum"}
point_set_range_composite = {problem = "https://judge.yosupo.jp/problem/point_set_range_composite"}
point_set_range_sort_range_composite = {problem = "https://judge.yosupo.jp/problem/point_set_range_sort_range_composite"}
predecessor_problem = {problem = "https://judge.yosupo.jp/problem/predecessor_problem"}
queue_operate_all_composite = {problem = "https://judge.yosupo.jp/problem/queue_operate_all_composite"}
range_affine_point_get = {problem = "https://judge.yosupo.jp/problem/range_affine_point_get"}
range_affine_range_sum = {problem = "https://judge.yosupo.jp/problem/range_affine_range_sum"}
range_chmin_chmax_add_range_sum = {problem = "https://judge.yosupo.jp/problem/range_chmin_chmax_add_range_sum"}
range_kth_smallest = {problem = "https://judge.yosupo.jp/problem/range_kth_smallest"}
range_reverse_range_sum = {problem = "https://judge.yosupo.jp/problem/range_reverse_range_sum"}
rectangle_sum = {problem = "https://judge.yosupo.jp/problem/rectangle_sum"}
segment_add_get_min = {problem = "https://judge.yosupo.jp/problem/segment_add_get_min"}
set_xor_min = {problem = "https://judge.yosupo.jp/problem/set_xor_min"}
staticrmq = {problem = "https://judge.yosupo.jp/problem/staticrmq"}
static_range_frequency = {problem = "https://judge.yosupo.jp/problem/static_range_frequency"}
static_range_inversions_query = {problem = "https://judge.yosupo.jp/problem/static_range_inversions_query"}
static_range_lis_query = {problem = "https://judge.yosupo.jp/problem/static_range_lis_query"}
static_range_sum = {problem = "https://judge.yosupo.jp/problem/static_range_sum"}
static_rectangle_add_rectangle_sum = {problem = "https://judge.yosupo.jp/problem/static_rectangle_add_rectangle_sum"}
unionfind = {problem = "https://judge.yosupo.jp/problem/unionfind"}
vertex_add_path_sum = {problem = "https://judge.yosupo.jp/problem/vertex_add_path_sum"}
vertex_add_subtree_sum = {problem = "https://judge.yosupo.jp/problem/vertex_add_subtree_sum"}
vertex_set_path_composite = {problem = "https://judge.yosupo.jp/problem/vertex_set_path_composite"}
convex_layers = {problem = "https://judge.yosupo.jp/problem/convex_layers"}
sort_points_by_argument = {problem = "https://judge.yosupo.jp/problem/sort_points_by_argument"}
assignment = {problem = "https://judge.yosupo.jp/problem/assignment"}
biconnected_components = {problem = "https://judge.yosupo.jp/problem/biconnected_components"}
bipartitematching = {problem = "https://judge.yosupo.jp/problem/bipartitematching"}
bipartite_edge_coloring = {problem = "https://judge.yosupo.jp/problem/bipartite_edge_coloring"}
cartesian_tree = {problem = "https://judge.yosupo.jp/problem/cartesian_tree"}
chordal_graph_recognition = {problem = "https://judge.yosupo.jp/problem/chordal_graph_recognition"}
chromatic_number = {problem = "https://judge.yosupo.jp/problem/chromatic_number"}
common_interval_decomposition_tree = {problem = "https://judge.yosupo.jp/problem/common_interval_decomposition_tree"}
cycle_detection = {problem = "https://judge.yosupo.jp/problem/cycle_detection"}
cycle_detection_undirected = {problem = "https://judge.yosupo.jp/problem/cycle_detection_undirected"}
directedmst = {problem = "https://judge.yosupo.jp/problem/directedmst"}
dominatortree = {problem = "https://judge.yosupo.jp/problem/dominatortree"}
enumerate_cliques = {problem = "https://judge.yosupo.jp/problem/enumerate_cliques"}
enumerate_triangles = {problem = "https://judge.yosupo.jp/problem/enumerate_triangles"}
frequency_table_of_tree_distance = {problem = "https://judge.yosupo.jp/problem/frequency_table_of_tree_distance"}
general_matching = {problem = "https://judge.yosupo.jp/problem/general_matching"}
general_weighted_matching = {problem = "https://judge.yosupo.jp/problem/general_weighted_matching"}
global_minimum_cut_of_dynamic_star_augmented_graph = {problem = "https://judge.yosupo.jp/problem/global_minimum_cut_of_dynamic_star_augmented_graph"}
jump_on_tree = {problem = "https://judge.yosupo.jp/problem/jump_on_tree"}
k_shortest_walk = {problem = "https://judge.yosupo.jp/problem/k_shortest_walk"}
lca = {problem = "https://judge.yosupo.jp/problem/lca"}
manhattanmst = {problem = "https://judge.yosupo.jp/problem/manhattanmst"}
maximum_independent_set = {problem = "https://judge.yosupo.jp/problem/maximum_independent_set"}
min_cost_b_flow = {problem = "https://judge.yosupo.jp/problem/min_cost_b_flow"}
rooted_tree_isomorphism_classification = {problem = "https://judge.yosupo.jp/problem/rooted_tree_isomorphism_classification"}
scc = {problem = "https://judge.yosupo.jp/problem/scc"}
shortest_path = {problem = "https://judge.yosupo.jp/problem/shortest_path"}
three_edge_connected_components = {problem = "https://judge.yosupo.jp/problem/three_edge_connected_components"}
tree_decomposition_width_2 = {problem = "https://judge.yosupo.jp/problem/tree_decomposition_width_2"}
tree_diameter = {problem = "https://judge.yosupo.jp/problem/tree_diameter"}
tree_path_composite_sum = {problem = "https://judge.yosupo.jp/problem/tree_path_composite_sum"}
two_edge_connected_components = {problem = "https://judge.yosupo.jp/problem/two_edge_connected_components"}
vertex_add_range_contour_sum_on_tree = {problem = "https://judge.yosupo.jp/problem/vertex_add_range_contour_sum_on_tree"}
vertex_get_range_contour_add_on_tree = {problem = "https://judge.yosupo.jp/problem/vertex_get_range_contour_add_on_tree"}
bernoulli_number = {problem = "https://judge.yosupo.jp/problem/bernoulli_number"}
binomial_coefficient = {problem = "https://judge.yosupo.jp/problem/binomial_coefficient"}
binomial_coefficient_prime_mod = {problem = "https://judge.yosupo.jp/problem/binomial_coefficient_prime_mod"}
bitwise_and_convolution = {problem = "https://judge.yosupo.jp/problem/bitwise_and_convolution"}
bitwise_xor_convolution = {problem = "https://judge.yosupo.jp/problem/bitwise_xor_convolution"}
characteristic_polynomial = {problem = "https://judge.yosupo.jp/problem/characteristic_polynomial"}
compositional_inverse_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/compositional_inverse_of_formal_power_series"}
composition_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/composition_of_formal_power_series"}
conversion_from_monomial_basis_to_newton_basis = {problem = "https://judge.yosupo.jp/problem/conversion_from_monomial_basis_to_newton_basis"}
convolution_mod = {problem = "https://judge.yosupo.jp/problem/convolution_mod"}
convolution_mod_1000000007 = {problem = "https://judge.yosupo.jp/problem/convolution_mod_1000000007"}
convolution_mod_2_64 = {problem = "https://judge.yosupo.jp/problem/convolution_mod_2_64"}
convolution_mod_large = {problem = "https://judge.yosupo.jp/problem/convolution_mod_large"}
counting_primes = {problem = "https://judge.yosupo.jp/problem/counting_primes"}
discrete_logarithm_mod = {problem = "https://judge.yosupo.jp/problem/discrete_logarithm_mod"}
division_of_big_integers = {problem = "https://judge.yosupo.jp/problem/division_of_big_integers"}
division_of_polynomials = {problem = "https://judge.yosupo.jp/problem/division_of_polynomials"}
enumerate_primes = {problem = "https://judge.yosupo.jp/problem/enumerate_primes"}
enumerate_quotients = {problem = "https://judge.yosupo.jp/problem/enumerate_quotients"}
exp_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/exp_of_formal_power_series"}
exp_of_formal_power_series_sparse = {problem = "https://judge.yosupo.jp/problem/exp_of_formal_power_series_sparse"}
exp_of_set_power_series = {problem = "https://judge.yosupo.jp/problem/exp_of_set_power_series"}
factorize = {problem = "https://judge.yosupo.jp/problem/factorize"}
find_linear_recurrence = {problem = "https://judge.yosupo.jp/problem/find_linear_recurrence"}
gcd_convolution = {problem = "https://judge.yosupo.jp/problem/gcd_convolution"}
hafnian_of_matrix = {problem = "https://judge.yosupo.jp/problem/hafnian_of_matrix"}
inverse_matrix = {problem = "https://judge.yosupo.jp/problem/inverse_matrix"}
inv_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/inv_of_formal_power_series"}
inv_of_formal_power_series_sparse = {problem = "https://judge.yosupo.jp/problem/inv_of_formal_power_series_sparse"}
inv_of_polynomials = {problem = "https://judge.yosupo.jp/problem/inv_of_polynomials"}
kth_root_integer = {problem = "https://judge.yosupo.jp/problem/kth_root_integer"}
kth_root_mod = {problem = "https://judge.yosupo.jp/problem/kth_root_mod"}
kth_term_of_linearly_recurrent_sequence = {problem = "https://judge.yosupo.jp/problem/kth_term_of_linearly_recurrent_sequence"}
lcm_convolution = {problem = "https://judge.yosupo.jp/problem/lcm_convolution"}
log_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/log_of_formal_power_series"}
log_of_formal_power_series_sparse = {problem = "https://judge.yosupo.jp/problem/log_of_formal_power_series_sparse"}
matrix_det = {problem = "https://judge.yosupo.jp/problem/matrix_det"}
matrix_det_arbitrary_mod = {problem = "https://judge.yosupo.jp/problem/matrix_det_arbitrary_mod"}
matrix_product = {problem = "https://judge.yosupo.jp/problem/matrix_product"}
min_of_mod_of_linear = {problem = "https://judge.yosupo.jp/problem/min_of_mod_of_linear"}
montmort_number_mod = {problem = "https://judge.yosupo.jp/problem/montmort_number_mod"}
multipoint_evaluation = {problem = "https://judge.yosupo.jp/problem/multipoint_evaluation"}
multipoint_evaluation_on_geometric_sequence = {problem = "https://judge.yosupo.jp/problem/multipoint_evaluation_on_geometric_sequence"}
multivariate_convolution = {problem = "https://judge.yosupo.jp/problem/multivariate_convolution"}
multivariate_convolution_cyclic = {problem = "https://judge.yosupo.jp/problem/multivariate_convolution_cyclic"}
mul_mod2n_convolution = {problem = "https://judge.yosupo.jp/problem/mul_mod2n_convolution"}
nim_product_64 = {problem = "https://judge.yosupo.jp/problem/nim_product_64"}
partition_function = {problem = "https://judge.yosupo.jp/problem/partition_function"}
polynomial_composite_set_power_series = {problem = "https://judge.yosupo.jp/problem/polynomial_composite_set_power_series"}
polynomial_interpolation = {problem = "https://judge.yosupo.jp/problem/polynomial_interpolation"}
polynomial_taylor_shift = {problem = "https://judge.yosupo.jp/problem/polynomial_taylor_shift"}
pow_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/pow_of_formal_power_series"}
pow_of_formal_power_series_sparse = {problem = "https://judge.yosupo.jp/problem/pow_of_formal_power_series_sparse"}
primality_test = {problem = "https://judge.yosupo.jp/problem/primality_test"}
primitive_root = {problem = "https://judge.yosupo.jp/problem/primitive_root"}
product_of_polynomial_sequence = {problem = "https://judge.yosupo.jp/problem/product_of_polynomial_sequence"}
sharp_p_subset_sum = {problem = "https://judge.yosupo.jp/problem/sharp_p_subset_sum"}
shift_of_sampling_points_of_polynomial = {problem = "https://judge.yosupo.jp/problem/shift_of_sampling_points_of_polynomial"}
sparse_matrix_det = {problem = "https://judge.yosupo.jp/problem/sparse_matrix_det"}
sqrt_mod = {problem = "https://judge.yosupo.jp/problem/sqrt_mod"}
sqrt_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/sqrt_of_formal_power_series"}
sqrt_of_formal_power_series_sparse = {problem = "https://judge.yosupo.jp/problem/sqrt_of_formal_power_series_sparse"}
stirling_number_of_the_first_kind = {problem = "https://judge.yosupo.jp/problem/stirling_number_of_the_first_kind"}
stirling_number_of_the_first_kind_small_p_large_n = {problem = "https://judge.yosupo.jp/problem/stirling_number_of_the_first_kind_small_p_large_n"}
stirling_number_of_the_second_kind = {problem = "https://judge.yosupo.jp/problem/stirling_number_of_the_second_kind"}
stirling_number_of_the_second_kind_small_p_large_n = {problem = "https://judge.yosupo.jp/problem/stirling_number_of_the_second_kind_small_p_large_n"}
subset_convolution = {problem = "https://judge.yosupo.jp/problem/subset_convolution"}
sum_of_exponential_times_polynomial = {problem = "https://judge.yosupo.jp/problem/sum_of_exponential_times_polynomial"}
sum_of_exponential_times_polynomial_limit = {problem = "https://judge.yosupo.jp/problem/sum_of_exponential_times_polynomial_limit"}
sum_of_floor_of_linear = {problem = "https://judge.yosupo.jp/problem/sum_of_floor_of_linear"}
sum_of_totient_function = {problem = "https://judge.yosupo.jp/problem/sum_of_totient_function"}
system_of_linear_equations = {problem = "https://judge.yosupo.jp/problem/system_of_linear_equations"}
tetration_mod = {problem = "https://judge.yosupo.jp/problem/tetration_mod"}
two_sat = {problem = "https://judge.yosupo.jp/problem/two_sat"}
aplusb = {problem = "https://judge.yosupo.jp/problem/aplusb"}
many_aplusb = {problem = "https://judge.yosupo.jp/problem/many_aplusb"}
many_aplusb_128bit = {problem = "https://judge.yosupo.jp/problem/many_aplusb_128bit"}
enumerate_palindromes = {problem = "https://judge.yosupo.jp/problem/enumerate_palindromes"}
number_of_substrings = {problem = "https://judge.yosupo.jp/problem/number_of_substrings"}
prefix_substring_lcs = {problem = "https://judge.yosupo.jp/problem/prefix_substring_lcs"}
runenumerate = {problem = "https://judge.yosupo.jp/problem/runenumerate"}
suffixarray = {problem = "https://judge.yosupo.jp/problem/suffixarray"}
zalgorithm = {problem = "https://judge.yosupo.jp/problem/zalgorithm"}

["package/metadata/cargo-compete/bin"]
area_of_union_of_rectangles = {problem = "https://judge.yosupo.jp/problem/area_of_union_of_rectangles"}
associative_array = {problem = "https://judge.yosupo.jp/problem/associative_array"}
deque_operate_all_composite = {problem = "https://judge.yosupo.jp/problem/deque_operate_all_composite"}
double_ended_priority_queue = {problem = "https://judge.yosupo.jp/problem/double_ended_priority_queue"}
dynamic_graph_vertex_add_component_sum = {problem = "https://judge.yosupo.jp/problem/dynamic_graph_vertex_add_component_sum"}
dynamic_sequence_range_affine_range_sum = {problem = "https://judge.yosupo.jp/problem/dynamic_sequence_range_affine_range_sum"}
dynamic_tree_subtree_add_subtree_sum = {problem = "https://judge.yosupo.jp/problem/dynamic_tree_subtree_add_subtree_sum"}
dynamic_tree_vertex_add_path_sum = {problem = "https://judge.yosupo.jp/problem/dynamic_tree_vertex_add_path_sum"}
dynamic_tree_vertex_add_subtree_sum = {problem = "https://judge.yosupo.jp/problem/dynamic_tree_vertex_add_subtree_sum"}
dynamic_tree_vertex_set_path_composite = {problem = "https://judge.yosupo.jp/problem/dynamic_tree_vertex_set_path_composite"}
line_add_get_min = {problem = "https://judge.yosupo.jp/problem/line_add_get_min"}
longest_increasing_subsequence = {problem = "https://judge.yosupo.jp/problem/longest_increasing_subsequence"}
number_of_subsequences = {problem = "https://judge.yosupo.jp/problem/number_of_subsequences"}
persistent_queue = {problem = "https://judge.yosupo.jp/problem/persistent_queue"}
persistent_unionfind = {problem = "https://judge.yosupo.jp/problem/persistent_unionfind"}
point_add_range_sum = {problem = "https://judge.yosupo.jp/problem/point_add_range_sum"}
point_add_rectangle_sum = {problem = "https://judge.yosupo.jp/problem/point_add_rectangle_sum"}
point_set_range_composite = {problem = "https://judge.yosupo.jp/problem/point_set_range_composite"}
point_set_range_sort_range_composite = {problem = "https://judge.yosupo.jp/problem/point_set_range_sort_range_composite"}
predecessor_problem = {problem = "https://judge.yosupo.jp/problem/predecessor_problem"}
queue_operate_all_composite = {problem = "https://judge.yosupo.jp/problem/queue_operate_all_composite"}
range_affine_point_get = {problem = "https://judge.yosupo.jp/problem/range_affine_point_get"}
range_affine_range_sum = {problem = "https://judge.yosupo.jp/problem/range_affine_range_sum"}
range_chmin_chmax_add_range_sum = {problem = "https://judge.yosupo.jp/problem/range_chmin_chmax_add_range_sum"}
range_kth_smallest = {problem = "https://judge.yosupo.jp/problem/range_kth_smallest"}
range_reverse_range_sum = {problem = "https://judge.yosupo.jp/problem/range_reverse_range_sum"}
rectangle_sum = {problem = "https://judge.yosupo.jp/problem/rectangle_sum"}
segment_add_get_min = {problem = "https://judge.yosupo.jp/problem/segment_add_get_min"}
set_xor_min = {problem = "https://judge.yosupo.jp/problem/set_xor_min"}
staticrmq = {problem = "https://judge.yosupo.jp/problem/staticrmq"}
static_range_frequency = {problem = "https://judge.yosupo.jp/problem/static_range_frequency"}
static_range_inversions_query = {problem = "https://judge.yosupo.jp/problem/static_range_inversions_query"}
static_range_lis_query = {problem = "https://judge.yosupo.jp/problem/static_range_lis_query"}
static_range_sum = {problem = "https://judge.yosupo.jp/problem/static_range_sum"}
static_rectangle_add_rectangle_sum = {problem = "https://judge.yosupo.jp/problem/static_rectangle_add_rectangle_sum"}
unionfind = {problem = "https://judge.yosupo.jp/problem/unionfind"}
vertex_add_path_sum = {problem = "https://judge.yosupo.jp/problem/vertex_add_path_sum"}
vertex_add_subtree_sum = {problem = "https://judge.yosupo.jp/problem/vertex_add_subtree_sum"}
vertex_set_path_composite = {problem = "https://judge.yosupo.jp/problem/vertex_set_path_composite"}
convex_layers = {problem = "https://judge.yosupo.jp/problem/convex_layers"}
sort_points_by_argument = {problem = "https://judge.yosupo.jp/problem/sort_points_by_argument"}
assignment = {problem = "https://judge.yosupo.jp/problem/assignment"}
biconnected_components = {problem = "https://judge.yosupo.jp/problem/biconnected_components"}
bipartitematching = {problem = "https://judge.yosupo.jp/problem/bipartitematching"}
bipartite_edge_coloring = {problem = "https://judge.yosupo.jp/problem/bipartite_edge_coloring"}
cartesian_tree = {problem = "https://judge.yosupo.jp/problem/cartesian_tree"}
chordal_graph_recognition = {problem = "https://judge.yosupo.jp/problem/chordal_graph_recognition"}
chromatic_number = {problem = "https://judge.yosupo.jp/problem/chromatic_number"}
common_interval_decomposition_tree = {problem = "https://judge.yosupo.jp/problem/common_interval_decomposition_tree"}
cycle_detection = {problem = "https://judge.yosupo.jp/problem/cycle_detection"}
cycle_detection_undirected = {problem = "https://judge.yosupo.jp/problem/cycle_detection_undirected"}
directedmst = {problem = "https://judge.yosupo.jp/problem/directedmst"}
dominatortree = {problem = "https://judge.yosupo.jp/problem/dominatortree"}
enumerate_cliques = {problem = "https://judge.yosupo.jp/problem/enumerate_cliques"}
enumerate_triangles = {problem = "https://judge.yosupo.jp/problem/enumerate_triangles"}
frequency_table_of_tree_distance = {problem = "https://judge.yosupo.jp/problem/frequency_table_of_tree_distance"}
general_matching = {problem = "https://judge.yosupo.jp/problem/general_matching"}
general_weighted_matching = {problem = "https://judge.yosupo.jp/problem/general_weighted_matching"}
global_minimum_cut_of_dynamic_star_augmented_graph = {problem = "https://judge.yosupo.jp/problem/global_minimum_cut_of_dynamic_star_augmented_graph"}
jump_on_tree = {problem = "https://judge.yosupo.jp/problem/jump_on_tree"}
k_shortest_walk = {problem = "https://judge.yosupo.jp/problem/k_shortest_walk"}
lca = {problem = "https://judge.yosupo.jp/problem/lca"}
manhattanmst = {problem = "https://judge.yosupo.jp/problem/manhattanmst"}
maximum_independent_set = {problem = "https://judge.yosupo.jp/problem/maximum_independent_set"}
min_cost_b_flow = {problem = "https://judge.yosupo.jp/problem/min_cost_b_flow"}
rooted_tree_isomorphism_classification = {problem = "https://judge.yosupo.jp/problem/rooted_tree_isomorphism_classification"}
scc = {problem = "https://judge.yosupo.jp/problem/scc"}
shortest_path = {problem = "https://judge.yosupo.jp/problem/shortest_path"}
three_edge_connected_components = {problem = "https://judge.yosupo.jp/problem/three_edge_connected_components"}
tree_decomposition_width_2 = {problem = "https://judge.yosupo.jp/problem/tree_decomposition_width_2"}
tree_diameter = {problem = "https://judge.yosupo.jp/problem/tree_diameter"}
tree_path_composite_sum = {problem = "https://judge.yosupo.jp/problem/tree_path_composite_sum"}
two_edge_connected_components = {problem = "https://judge.yosupo.jp/problem/two_edge_connected_components"}
vertex_add_range_contour_sum_on_tree = {problem = "https://judge.yosupo.jp/problem/vertex_add_range_contour_sum_on_tree"}
vertex_get_range_contour_add_on_tree = {problem = "https://judge.yosupo.jp/problem/vertex_get_range_contour_add_on_tree"}
bernoulli_number = {problem = "https://judge.yosupo.jp/problem/bernoulli_number"}
binomial_coefficient = {problem = "https://judge.yosupo.jp/problem/binomial_coefficient"}
binomial_coefficient_prime_mod = {problem = "https://judge.yosupo.jp/problem/binomial_coefficient_prime_mod"}
bitwise_and_convolution = {problem = "https://judge.yosupo.jp/problem/bitwise_and_convolution"}
bitwise_xor_convolution = {problem = "https://judge.yosupo.jp/problem/bitwise_xor_convolution"}
characteristic_polynomial = {problem = "https://judge.yosupo.jp/problem/characteristic_polynomial"}
compositional_inverse_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/compositional_inverse_of_formal_power_series"}
composition_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/composition_of_formal_power_series"}
conversion_from_monomial_basis_to_newton_basis = {problem = "https://judge.yosupo.jp/problem/conversion_from_monomial_basis_to_newton_basis"}
convolution_mod = {problem = "https://judge.yosupo.jp/problem/convolution_mod"}
convolution_mod_1000000007 = {problem = "https://judge.yosupo.jp/problem/convolution_mod_1000000007"}
convolution_mod_2_64 = {problem = "https://judge.yosupo.jp/problem/convolution_mod_2_64"}
convolution_mod_large = {problem = "https://judge.yosupo.jp/problem/convolution_mod_large"}
counting_primes = {problem = "https://judge.yosupo.jp/problem/counting_primes"}
discrete_logarithm_mod = {problem = "https://judge.yosupo.jp/problem/discrete_logarithm_mod"}
division_of_big_integers = {problem = "https://judge.yosupo.jp/problem/division_of_big_integers"}
division_of_polynomials = {problem = "https://judge.yosupo.jp/problem/division_of_polynomials"}
enumerate_primes = {problem = "https://judge.yosupo.jp/problem/enumerate_primes"}
enumerate_quotients = {problem = "https://judge.yosupo.jp/problem/enumerate_quotients"}
exp_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/exp_of_formal_power_series"}
exp_of_formal_power_series_sparse = {problem = "https://judge.yosupo.jp/problem/exp_of_formal_power_series_sparse"}
exp_of_set_power_series = {problem = "https://judge.yosupo.jp/problem/exp_of_set_power_series"}
factorize = {problem = "https://judge.yosupo.jp/problem/factorize"}
find_linear_recurrence = {problem = "https://judge.yosupo.jp/problem/find_linear_recurrence"}
gcd_convolution = {problem = "https://judge.yosupo.jp/problem/gcd_convolution"}
hafnian_of_matrix = {problem = "https://judge.yosupo.jp/problem/hafnian_of_matrix"}
inverse_matrix = {problem = "https://judge.yosupo.jp/problem/inverse_matrix"}
inv_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/inv_of_formal_power_series"}
inv_of_formal_power_series_sparse = {problem = "https://judge.yosupo.jp/problem/inv_of_formal_power_series_sparse"}
inv_of_polynomials = {problem = "https://judge.yosupo.jp/problem/inv_of_polynomials"}
kth_root_integer = {problem = "https://judge.yosupo.jp/problem/kth_root_integer"}
kth_root_mod = {problem = "https://judge.yosupo.jp/problem/kth_root_mod"}
kth_term_of_linearly_recurrent_sequence = {problem = "https://judge.yosupo.jp/problem/kth_term_of_linearly_recurrent_sequence"}
lcm_convolution = {problem = "https://judge.yosupo.jp/problem/lcm_convolution"}
log_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/log_of_formal_power_series"}
log_of_formal_power_series_sparse = {problem = "https://judge.yosupo.jp/problem/log_of_formal_power_series_sparse"}
matrix_det = {problem = "https://judge.yosupo.jp/problem/matrix_det"}
matrix_det_arbitrary_mod = {problem = "https://judge.yosupo.jp/problem/matrix_det_arbitrary_mod"}
matrix_product = {problem = "https://judge.yosupo.jp/problem/matrix_product"}
min_of_mod_of_linear = {problem = "https://judge.yosupo.jp/problem/min_of_mod_of_linear"}
montmort_number_mod = {problem = "https://judge.yosupo.jp/problem/montmort_number_mod"}
multipoint_evaluation = {problem = "https://judge.yosupo.jp/problem/multipoint_evaluation"}
multipoint_evaluation_on_geometric_sequence = {problem = "https://judge.yosupo.jp/problem/multipoint_evaluation_on_geometric_sequence"}
multivariate_convolution = {problem = "https://judge.yosupo.jp/problem/multivariate_convolution"}
multivariate_convolution_cyclic = {problem = "https://judge.yosupo.jp/problem/multivariate_convolution_cyclic"}
mul_mod2n_convolution = {problem = "https://judge.yosupo.jp/problem/mul_mod2n_convolution"}
nim_product_64 = {problem = "https://judge.yosupo.jp/problem/nim_product_64"}
partition_function = {problem = "https://judge.yosupo.jp/problem/partition_function"}
polynomial_composite_set_power_series = {problem = "https://judge.yosupo.jp/problem/polynomial_composite_set_power_series"}
polynomial_interpolation = {problem = "https://judge.yosupo.jp/problem/polynomial_interpolation"}
polynomial_taylor_shift = {problem = "https://judge.yosupo.jp/problem/polynomial_taylor_shift"}
pow_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/pow_of_formal_power_series"}
pow_of_formal_power_series_sparse = {problem = "https://judge.yosupo.jp/problem/pow_of_formal_power_series_sparse"}
primality_test = {problem = "https://judge.yosupo.jp/problem/primality_test"}
primitive_root = {problem = "https://judge.yosupo.jp/problem/primitive_root"}
product_of_polynomial_sequence = {problem = "https://judge.yosupo.jp/problem/product_of_polynomial_sequence"}
sharp_p_subset_sum = {problem = "https://judge.yosupo.jp/problem/sharp_p_subset_sum"}
shift_of_sampling_points_of_polynomial = {problem = "https://judge.yosupo.jp/problem/shift_of_sampling_points_of_polynomial"}
sparse_matrix_det = {problem = "https://judge.yosupo.jp/problem/sparse_matrix_det"}
sqrt_mod = {problem = "https://judge.yosupo.jp/problem/sqrt_mod"}
sqrt_of_formal_power_series = {problem = "https://judge.yosupo.jp/problem/sqrt_of_formal_power_series"}
sqrt_of_formal_power_series_sparse = {problem = "https://judge.yosupo.jp/problem/sqrt_of_formal_power_series_sparse"}
stirling_number_of_the_first_kind = {problem = "https://judge.yosupo.jp/problem/stirling_number_of_the_first_kind"}
stirling_number_of_the_first_kind_small_p_large_n = {problem = "https://judge.yosupo.jp/problem/stirling_number_of_the_first_kind_small_p_large_n"}
stirling_number_of_the_second_kind = {problem = "https://judge.yosupo.jp/problem/stirling_number_of_the_second_kind"}
stirling_number_of_the_second_kind_small_p_large_n = {problem = "https://judge.yosupo.jp/problem/stirling_number_of_the_second_kind_small_p_large_n"}
subset_convolution = {problem = "https://judge.yosupo.jp/problem/subset_convolution"}
sum_of_exponential_times_polynomial = {problem = "https://judge.yosupo.jp/problem/sum_of_exponential_times_polynomial"}
sum_of_exponential_times_polynomial_limit = {problem = "https://judge.yosupo.jp/problem/sum_of_exponential_times_polynomial_limit"}
sum_of_floor_of_linear = {problem = "https://judge.yosupo.jp/problem/sum_of_floor_of_linear"}
sum_of_totient_function = {problem = "https://judge.yosupo.jp/problem/sum_of_totient_function"}
system_of_linear_equations = {problem = "https://judge.yosupo.jp/problem/system_of_linear_equations"}
tetration_mod = {problem = "https://judge.yosupo.jp/problem/tetration_mod"}
two_sat = {problem = "https://judge.yosupo.jp/problem/two_sat"}
aplusb = {problem = "https://judge.yosupo.jp/problem/aplusb"}
many_aplusb = {problem = "https://judge.yosupo.jp/problem/many_aplusb"}
many_aplusb_128bit = {problem = "https://judge.yosupo.jp/problem/many_aplusb_128bit"}
enumerate_palindromes = {problem = "https://judge.yosupo.jp/problem/enumerate_palindromes"}
number_of_substrings = {problem = "https://judge.yosupo.jp/problem/number_of_substrings"}
prefix_substring_lcs = {problem = "https://judge.yosupo.jp/problem/prefix_substring_lcs"}
runenumerate = {problem = "https://judge.yosupo.jp/problem/runenumerate"}
suffixarray = {problem = "https://judge.yosupo.jp/problem/suffixarray"}
zalgorithm = {problem = "https://judge.yosupo.jp/problem/zalgorithm"}
